# SimpleEngine

./: .gitignore  CMakeLists.txt  WhimEngine.sln
GLFWTest/: GLFWTest.cpp  GLFWTest.vcxproj  GLFWTest.vcxproj.filters  imgui.ini
GLFWTest/assets/shaders/: default.fragment.glsl  default.vertex.glsl
GLFWTest/core/asset-loader/: AssetLoader.cpp  AssetLoader.hpp  ShaderAssets.hpp
GLFWTest/core/input/: Input.cpp  Input.h  Input.hpp
GLFWTest/core/logger/: Logger.cpp  Logger.hpp
GLFWTest/core/rendering/: EBO.cpp  EBO.hpp  OpenGLContext.cpp  OpenGLContext.hpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h
WhimEngine/: WhimEngine.cpp
WhimEngine/assets/shaders/: default.fragment.glsl  default.vertex.glsl
WhimEngine/core/asset-loader/: AssetLoader.cpp  AssetLoader.hpp  ShaderAssets.hpp
WhimEngine/core/game/: Scene.cpp  Scene.h  World.cpp  World.h
WhimEngine/core/input/: Input.cpp  Input.hpp  InputCommand.hpp
WhimEngine/core/logger/: Logger.cpp  Logger.hpp
WhimEngine/core/rendering/: Block.cpp  Block.h  Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Vertex.h  Voxel.cpp  Voxel.h
WhimEngine/core/util/: Util.cpp  Util.hpp
